infra/3-k8-common-stage/k8-manifests/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gw-ingress
  namespace: ${ENVIRONMENT}
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.${ENVIRONMENT}.smartcash.rootkit.site
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 80
      - path: /expenses
        pathType: Prefix
        backend:
          service:
            name: expenses
            port:
              number: 80
      - path: /bank
        pathType: Prefix
        backend:
          service:
            name: bank
            port:
              number: 80
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 80
  tls: 
    - hosts:
      - api.${ENVIRONMENT}.smartcash.rootkit.site
      secretName: frontend-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: ${ENVIRONMENT}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ${ENVIRONMENT}.smartcash.rootkit.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls: 
    - hosts:
      - ${ENVIRONMENT}.smartcash.rootkit.site
      secretName: frontend-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.${ENVIRONMENT}.smartcash.rootkit.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
  tls: 
   - hosts:
      - monitoring.${ENVIRONMENT}.smartcash.rootkit.site
     secretName: grafana-tls
